--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">CompartyApplication</string>
+    <string name="motherboard">Motherboard</string>
+    <string name="cases">Cases</string>
+    <string name="power_supply">Power Supply</string>
+    <string name="gpu">GPU</string>
+    <string name="ram">RAM</string>
+    <string name="cpu">CPU</string>
 </resources>
